--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>RPS Game</title>
-        <meta charset="utf-8">
-        <script src="rpsgame.js"></script>
-
-    </head>
-    <body>
-        <div>Hello</div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RPS Game</title>
+    <script src="rpsgame.js"></script>
+</head>
+<body>
+    <div>Hello</div>
+    <button id="btn">Rock</button>
+    <button class="paperButton">Paper</button>
+    <button class="scissorsButton">Scissors</button>
+</body>
 </html>
