--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS Game</title>
-    <script src="rpsgame.js"></script>
+    <script src="rpsgame.js" defer></script>
 </head>
 <body>
-    <div>Hello</div>
-    <button id="btn">Rock</button>
+    <div>Make your choice ...</div>
+    <button class="rockButton">Rock</button>
     <button class="paperButton">Paper</button>
     <button class="scissorsButton">Scissors</button>
+    <div class="resultat"></div>
 </body>
 </html>
