correction retrait forEach() et ajout de l'affichage des scores

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <button class="paperButton">Paper</button>
     <button class="scissorsButton">Scissors</button>
     <div class="resultat"></div>
+    <div class="score"></div>
 </body>
 </html>
